--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "jest-environment-jsdom": "^29.4.2"
+    "jest-environment-jsdom": "^29.4.2",
+    "module-alias": "^2.2.2"
   }
 }
